# STOMACH_pytorch

./: LICENSE  README.md  main.py  pyproject.toml
images/: pipeline_parameters.csv
stomach_pytorch/: stomach_pytorch.py
stomach_pytorch/embeddings/: faces.npy
