[tool.poetry]
name = "stomach_pytorch"
version = "0.1.0"
description = "A Python project for mesh generation using DPCA and PCA with PyTorch and Open3D."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
torch = "^1.13"
matplotlib = "^3.5"
scipy = "^1.9"
scikit-learn = "^1.1"
open3d = "^0.17"
pyvista = "^0.38"


[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"